# Aug-9-revisions

./: # summary.md  # updated_complile_reports.py  # updated_sandbox_cost_volume_assembler.py  # updated_sandbox_validate_kb.py  .pre-commit-config.yaml  DELIVERABLES_SUMMARY.md  FAR_15_408_Table_15_2_ALL_VARIATIONS.md  FOLDER_ORGANIZATION_README.md  Makefile  PROJECT_AUDIT_SUMMARY.md  PROPOSALOS_RGE_COMPLETE.md  Refactor plan (structure, naming, patter.py  Reports that need to be gernated.md  Wiring for registry_bootstrap.y, pyproject.toml, .pre-commit-config.yaml  adjacency.json  edges.csv  example_registry_usage.py  graph.graphml  main.py  nodes.csv  pre-commit-config.yaml  procurement_integrator.py  project_audit (1).py  project_audit_report.md  project_audit_report_with_kb.md  pyproject.toml  registry_bootstrap.py  requirements-dev.txt  requirements.txt  setup_quality_tools.sh  test_proposalos_rge.py
Cost_Volume_Assembly/: Cost_Volume_FULL.md  Cost_Volume_Skeleton.md  Cost_Volume_Tables.md  proposal_os_rge_mvp_schemas_registry_renderer_api.md  pyproject.toml  sandbox_cost_algorithms.py  sandbox_cost_volume_assembler.py  sandbox_cost_volume_assembler_v2.py
Cost_Volume_Assembly/Costing,Pricing Reports/: annual_fiscal_year_report_assembler.py  dfars_checklist_assembler.py  dfars_cover_page_assembler.py  far_15_2_assembler.py  fccom_form_assembler.py  registry_bootstrap.py  render_md_dfars_templates.py
ProposalOS_Production_System/Code_Snippets/: 1) Concrete prompt (RFP EoC Extraction v2).py  2) Tiny post-processor (reject:repair).py  3) Orchestrator patches (auth default-deny + extraction schema expectation).py  4) Redis token-bucket rate limiter (middleware).py  5) PR plan- align model choice + remove duplicates.py  Add Procurement Endpoints with a Circuit Breaker.py  And in your handler-.py  CORS tighten (env-driven).py  Extraction schema expectation (align server to new JSON).py  Integrate Knowledge Graph Queries
ProposalOS_Production_System/Configuration/: LLM_MODEL_G.env
ProposalOS_Production_System/Core_Orchestrator/: auth.py  circuit_breakers.py  config.py  extraction_service.py  orchestrator_enhanced.py  orchestrator_procurement_enhanced.py  orchestrator_production.py  state_manager.py
ProposalOS_Production_System/Documentation/: PROPOSALEOS_COMPREHENSIVE_ANALYSIS_REPORT.md  PROPOSALÖS_PRODUCTION_READY_SUMMARY.md  ROADMAP_IMPLEMENTATION.md
ProposalOS_Production_System/Procurement_Modules/: procurement_compliance_checker.py  sam_rfp_scraper.py  validate_subcontract.py
ProposalOS_Production_System/Tests/: test_proposalOS_integration.py
RFP_Discovery_Reports/: RFP_Discovery_Report_20250809_233043.md
RFP_Discovery_System/: KB_cleaned.json  compile_reports_refactor (1).py  compile_reports_refactor.py  complile_reports.py  demo_inputs.json  dita_parser_AF_SF_Army_Navy.py  sandbox_graph_builder.py
RFP_KnowledgeBase/: RFP_KB_Facts_20250809_233043.json
Validation_Testing/: REFACTORED_VALIDATOR_ANALYSIS.md  error_analysis_report.md  error_tracking_dashboard.py  refactored_validator_test_report.md  sandbox_validate_kb.py  test_error_scenarios.py  test_kb_errors.json  test_kb_errors.md  test_refactored_validator.py
graph_out/: adjacency.json  edges.csv  graph.graphml  nodes.csv
proposalos_rge/: __init__.py  example_usage.py  registry.py  schemas.py
proposalos_rge/api/: endpoints.py
proposalos_rge/inputs/: kb_loader.py  ui_adapter.py
proposalos_rge/normalize/: builder.py
proposalos_rge/render/: __init__.py
proposalos_rge/render/md/: annual_fy.py  dfars_templates.py
proposalos_rge/validate/: rules.py
