[project]
name = "proposalos"
version = "0.1.0"
description = "Unified Report Generation Engine for proposals (ProposalOS)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "httpx>=0.27.0",
  "redis>=5.0.4",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E","F","W",   # pycodestyle/pyflakes warnings
  "I",           # isort
  "UP",          # pyupgrade
  "B",           # flake8-bugbear
  "C90",         # mccabe complexity
  "S",           # bandit (security)
]
ignore = [
  "E203",  # whitespace before ':' (Black compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["httpx.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.bandit]
skips = ["B101"]  # assert used
